2009-06-19  Sven Herzberg  <herzi@lanedo.com>

	NB#110565 - sapwood-server server prints debugging stuff to console

	* server/sapwood-server.c (main): only display the message when we are
	in debugging mode

2009-02-27  Sven Herzberg  <herzi@lanedo.com>

	NB#103175 - Sapwood crashes when large windows trigger BadAlloc errors

	* engine/theme-pixbuf.c (theme_pixbuf_render): enable the gdk_flush()
	call between the error traps

2009-02-27  Sven Herzberg  <herzi@lanedo.com>

	About NB#103175 - Sapwood crashes when large windows trigger BadAlloc
	errors

	Added a testcase

	* tests/Makefile.am: build and run the testcase
	* tests/large-window.c (text_view_mapped), (main),
	* tests/large-window.gtkrc: the testcase files

2009-02-27  Sven Herzberg  <herzi@lanedo.com>

	Properly execute tests against the correct modules

	* tests/Makefile.am: also use the script from the demos folder
	* tests/sapwood-wrapper: point to the correct module

2009-01-16  Sven Herzberg  <sven@imendio.com>

	Comment out my hildon-specific hack in the server wrapper file

	* tests/sapwood-wrapper: drop this

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Compile against a vanilla GTK+

	* tests/double-free.c: GTK+ 2.14 doesn't allow including
	<gtk/gtktestutils.h>; Maemo-GTK doesn't include it in <gtk/gtk.h>; so
	we need this version check here

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Updated to the refactored paths.

	* demos/run-demo: replaced src by engine, as this is where the engine
	is built now

2008-09-08  Sven Herzberg  <sven@imendio.com>

	Created cache_node_ref()

	* server/cache-node.c (cache_node_ref): added new function
	* server/cache-node.h: added new prototype
	* server/sapwood-server.c (process_buffer): use the cache_node_ref()
	function

2008-09-08  Sven Herzberg  <sven@imendio.com>

	Moved memory management for CacheNode into separate files; now we have
	two well-specified locations left for allocation and free of CacheNode
